--- a/assets/style.css
+++ b/assets/style.css
@@ -75,6 +75,7 @@ html {
 }
 
 .nav>li {
+    transition: all .2s linear;
     position: relative;
     display: inline-block;
 }
@@ -85,6 +86,7 @@ html {
 }
 
 .nav li a {
+    transition: all .2s linear;
     display: block;
     height: 100%;
     padding: 0 24px;
@@ -352,6 +354,7 @@ html {
 }
 
 .content .tickets-btn {
+    transition: all .2s linear;
     display: inline-block;
     margin-top: 16px;
     padding: 10px 16px;
@@ -363,6 +366,7 @@ html {
 }
 
 .content .tickets-btn:hover {
+    transition: all .2s linear;
     background-color: #ccc;
     color: black;
 }
