--- a/assets/style.css
+++ b/assets/style.css
@@ -66,7 +66,7 @@ html {
     width: 100%;
     background-color: rgb(0, 0, 0);
     z-index: 100;
-    box-shadow: 0 1px 8px 0 rgba(255, 255, 255, .2);
+    border-bottom: 1px solid rgba(255, 255, 255, .2);
 }
 
 .nav {
